tests/ui/proc-macro/mixed-site-span.stderr
error[E0426]: use of undeclared label `'label_use`
  --> $DIR/mixed-site-span.rs:13:9
   |
LL |         proc_macro_rules!();
   |         ^^^^^^^^^^^^^^^^^^^
   |         |
   |         undeclared label `'label_use`
   |         in this macro invocation
   |
  ::: $DIR/auxiliary/mixed-site-span.rs:12:1
   |
LL | pub fn proc_macro_rules(input: TokenStream) -> TokenStream {
   | ---------------------------------------------------------- in this expansion of `proc_macro_rules!`

error[E0425]: cannot find value `local_use` in this scope
  --> $DIR/mixed-site-span.rs:13:9
   |
LL |         proc_macro_rules!();
   |         ^^^^^^^^^^^^^^^^^^^
   |         |
   |         help: a local variable with a similar name exists: `local_def`
   |         in this macro invocation
   |
  ::: $DIR/auxiliary/mixed-site-span.rs:12:1
   |
LL | pub fn proc_macro_rules(input: TokenStream) -> TokenStream {
   | ---------------------------------------------------------- in this expansion of `proc_macro_rules!`

error[E0425]: cannot find value `local_def` in this scope
  --> $DIR/mixed-site-span.rs:17:9
   |
LL |         local_def;
   |         ^^^^^^^^^ help: a local variable with a similar name exists: `local_use`

error[E0412]: cannot find type `ItemUse` in crate `$crate`
  --> $DIR/auxiliary/mixed-site-span.rs:37:37
   |
LL |   pub fn proc_macro_rules(input: TokenStream) -> TokenStream {
   |   ---------------------------------------------------------- in this expansion of `proc_macro_rules!` (#2)
...
LL |               type A = $dollar_crate::ItemUse;
   |                                       ^^^^^^^ not found in `$crate`
   |
  ::: $DIR/mixed-site-span.rs:21:1
   |
LL | / macro_rules! pass_dollar_crate {
LL | |     () => (proc_macro_rules!($crate);)
   | |            ------------------------- in this macro invocation (#2)
LL | | }
   | |_- in this expansion of `pass_dollar_crate!` (#1)
LL |   pass_dollar_crate!();
   |   -------------------- in this macro invocation (#1)

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0412, E0425, E0426.
For more information about an error, try `rustc --explain E0412`.
